2006-06-23  Mark D. Baushke  <mdb@juniper.net>

	* stdint.m4: Both BSD/OS 4.2 and SGI-cc IRIX 5.3 seem to also need
	<sys/types.h> included.

2006-06-22  Mark D. Baushke  <mdb@gnu.org>

	* stdint.m4: Fork from gnulib based on tests with SGI.
	* getaddrinfo.m4, sockpfaf.m4: Update from gnulib.

2006-06-19  Mark D. Baushke  <mdb@gnu.org>

	* setenv.m4, size_max.m4, ssize_t.m4, stdint.m4: Update from
	gnulib.

2006-05-22  Mark D. Baushke  <mdb@gnu.org>

	* nanosleep.m4: Update from gnulib.

2006-05-15  Mark D. Baushke  <mdb@gnu.org>

	* stdbool.m4: Update from gnulib.

2006-05-13  Mark Baushke  <mdb@gnu.org>

	* _inttypes_h.m4, full-header-path.m4, gnulib-cache.m4,
	gnulib-comp.m4: Update from gnulib.

2006-04-27  Derek Price  <derek@ximbiot.com>

	* acx_with_gssapi.m4 (ACX_WITH_GSSAPI): Detect libgss for HP-UX.
	(Report from Larry Jones <lawrence.jones@ugs.com>.)

2006-04-25  Derek Price  <derek@ximbiot.com>

	* extensions.m4, getcwd-path-max.m4, getlogin_r.m4, getpass.m4,
	nanosleep.m4, rename.m4, strerror_r.m4, unlocked-io.m4: Update from
	GNULIB.

2005-10-27  Derek Price  <derek@ximbiot.com>

	* base64.m4: New file from GNULIB.

2006-04-19  Derek Price  <derek@ximbiot.com>

	* full-header-path.m4, longdouble.m4: Update from GNULIB.

2006-04-13  Derek Price  <derek@ximbiot.com>

	* full-header-path.m4: Use correct cache var for HAVE_INCLUDE_NEXT.

2006-04-12  Derek Price  <derek@ximbiot.com>

	* _inttypes_h.m4, full-header-path.m4, include_next.m4: New files, pre
	GNULIB.

2006-04-07  Derek Price  <derek@ximbiot.com>

	Import strtoumax module from GNULIB.
	* strtoimax.m4, strtoll.m4, strtoull.m4, strtoumax.m4: New files.
	* bison.m4, mbiter.m4: Updated.

2006-03-30  Mark D. Baushke  <mdb@gnu.org>

	* regex.m4: Update from GNULIB.

2006-03-19  Mark D. Baushke  <mdb@gnu.org>

	* clock_time.m4, extensions.m4, getaddrinfo.m4, gnulib-comp.m4,
	nanosleep.m4, regex.m4, socklen.m4, sys_socket_h.m4, timespec.m4,
	unistd_h.m4: Update from GNULIB.
