@@ -1,3 +1,8 @@
+2006-06-23  Larry Jones  <lawrence.jones@ugs.com>
+
+	* stdint.m4: Combine BSD/OS stuff with OpenBSD/SGI and use the
+	correct preprocessor symbol.
+
 2006-06-23  Mark D. Baushke  <mdb@juniper.net>
 
 	* stdint.m4: Both BSD/OS 4.2 and SGI-cc IRIX 5.3 seem to also need
